--- a/recyclarr/configs/sonarr2.yml
+++ b/recyclarr/configs/sonarr2.yml
@@ -29,8 +29,8 @@ sonarr:
       - template: sonarr-quality-definition-anime
       # Profile souhaité - veuillez à avoir les lignes correspondantes activées
       # --- Profile VOSTFR ---
-      # - template: sonarr-v4-quality-profile-1080p-french-anime-vostfr
-      # - template: sonarr-v4-custom-formats-1080p-french-anime-vostfr
+      - template: sonarr-v4-quality-profile-1080p-french-anime-vostfr
+      - template: sonarr-v4-custom-formats-1080p-french-anime-vostfr
       # --- Profile MULTi.VO ---
       - template: sonarr-v4-quality-profile-1080p-french-anime-multi
       - template: sonarr-v4-custom-formats-1080p-french-anime-multi
@@ -60,21 +60,21 @@ sonarr:
       - trash_ids:
           - 026d5aadd1a6b4e550b134cb6c72b3ca # Uncensored
         assign_scores_to:
-          # - name: FR-ANIME-VOSTFR
-            # score: 0 # Ajuster le score comme souhaité
+          - name: FR-ANIME-VOSTFR
+            score: 10 # Ajuster le score comme souhaité
           - name: FR-ANIME-MULTi
             score: 10 # Ajuster le score comme souhaité
       - trash_ids:
           - b2550eb333d27b75833e25b8c2557b38 # 10bit
         assign_scores_to:
-          # - name: FR-ANIME-VOSTFR
-            # score: 0 # Ajuster le score comme souhaité
+          - name: FR-ANIME-VOSTFR
+            score: 10 # Ajuster le score comme souhaité
           - name: FR-ANIME-MULTi
             score: 10 # Ajuster le score comme souhaité
       - trash_ids:
           - 418f50b10f1907201b6cfdf881f467b7 # Anime Dual Audio
         assign_scores_to:
-          # - name: FR-ANIME-VOSTFR
-            # score: 0 # Ajuster le score comme souhaité
+          - name: FR-ANIME-VOSTFR
+            score: 10 # Ajuster le score comme souhaité
           - name: FR-ANIME-MULTi
             score: 10 # Ajuster le score comme souhaité
