--- a/.gitmodules
+++ b/.gitmodules
@@ -24,6 +24,8 @@ url = https://github.com/Kometa-Team/Kometa
 path = VueTorrent/vuetorrent-backend
 shallow = true
 url = https://github.com/VueTorrent/vuetorrent-backend.git
+
 [submodule "JBOPS"]
-	path = JBOPS
-	url = git@github.com:blacktwin/JBOPS.git
+path = JBOPS
+url = https://github.com/blacktwin/JBOPS.git
+shallow = true
