New exceeding quotas notifier script (replace Notify Disk Usage)

--- a/scripts/quotas_notifier/quotas_notifier.service
+++ b/scripts/quotas_notifier/quotas_notifier.service
@@ -1,13 +1,13 @@
 [Unit]
-Description=Notify Disk Usage
-Wants=notify_disk_usage.timer
+Description=Quotas Notifier
+Wants=quotas_usage.timer
 OnFailure=notify_onFailure@%i.service
 
 [Service]
 Type=oneshot
 WorkingDirectory=%h/blackpearrl/scripts
 EnvironmentFile=%h/blackpearrl/.env
-ExecStart=%h/.local/bin/pipenv run python3 notify_disk_usage/notify_disk_usage.py
+ExecStart=%h/.local/bin/pipenv run python3 quotas_notifier/quotas_notifier.py
 
 [Install]
 WantedBy=multi-user.target
