Updated qbm config

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,20 @@ DISK_USAGE_THRESHOLD_GB=1000
 
 # qBittorrent
 QBIT_BASE="https://qbittorrent.local/"
+QBT_HOST="https://qbittorrent.local/"
+QBT_USER=""
+QBT_PASS=""
+
+# qBittorrent Manage webhooks
+QBM_WEBHOOK_ERROR=
+QBM_WEBHOOK_RUN_START=
+QBM_WEBHOOK_RUN_END=
+QBM_WEBHOOK_RECHECK=
+QBM_WEBHOOK_CAT_UPDATE=
+QBM_WEBHOOK_TAG_UPDATE=
+QBM_WEBHOOK_REM_UNREGISTERED=
+QBM_WEBHOOK_TAG_TRACKER_ERROR=
+QBM_WEBHOOK_REM_ORPHANED=
+QBM_WEBHOOK_TAG_NOHARDLINKS=
+QBM_WEBHOOK_SHARE_LIMITS=
+QBM_WEBHOOK_CLEANUP_DIRS=
