--- a/qbit_manage/config.yaml
+++ b/qbit_manage/config.yaml
@@ -2,7 +2,6 @@
 
 commands:
   dry_run: false # Will not execute any commands, but will print what would be executed.
-  cross_seed: false # Will cross seed torrents from one client to another.
   recheck: false # Will recheck all torrents.
   cat_update: true # Will update torrent categories.
   tag_update: true # Will update torrent tags.
@@ -21,33 +20,41 @@ qbt:
 
 settings:
   force_auto_tmm: true # Will force qBittorrent to enable Automatic Torrent Management for each torrent.
-  tracker_error_tag: tracker_error # Will set the tag of any torrents that do not have a working tracker.
+  force_auto_tmm_ignore_tags: #Torrents with these tags will be ignored when force_auto_tmm is enabled.
+    - cross-seed
+    - Upload
+  tracker_error_tag: issue # Will set the tag of any torrents that do not have a working tracker.
   nohardlinks_tag: noHL # Will set the tag of any torrents with no hardlinks.
   share_limits_tag: ~share_limit # Will add this tag when applying share limits to provide an easy way to filter torrents by share limit group/priority for each torrent
   share_limits_min_seeding_time_tag: MinSeedTimeNotReached # Tag to be added to torrents that have not yet reached the minimum seeding time
   share_limits_min_num_seeds_tag: MinSeedsNotMet # Tag to be added to torrents that have not yet reached the minimum number of seeds
   share_limits_last_active_tag: LastActiveLimitNotReached # Tag to be added to torrents that have not yet reached the last active limit
-  ignoreTags_OnUpdate: # When running tag-update function, it will update torrent tags for a given torrent even if the torrent has at least one or more of the tags defined here.
-    - noHL
-    - tracker_error
-    - private
-    - public
-    - MinSeedTimeNotReached
-    - MinSeedsNotMet
-    - LastActiveLimitNotReached
   cat_filter_completed: True # Filters for completed torrents only when running cat_update command
   share_limits_filter_completed: True # Filters for completed torrents only when running share_limits command
   tag_nohardlinks_filter_completed: True # Filters for completed torrents only when running tag_nohardlinks command
-  cross_seed_tag: cross_seed # Will set the tag of any torrents that are cross seeding.
-  cat_update_all: false # Will update all torrents when running cat_update command.
-  force_retag_all: false # Will force retagging all torrents when running tag_update command.
+  rem_unregistered_filter_completed: False # Filters for completed torrents only when running rem_unregistered command
+  cat_update_all: True # Checks and updates all torrent categories if set to True when running cat_update command, otherwise only update torrents that are uncategorized
+  disable_qbt_default_share_limits: True # Allows QBM to handle share limits by disabling qBittorrents default Share limits. Only active when the share_limits command is set to True
+  tag_stalled_torrents: True # Tags any downloading torrents that are stalled with the `stalledDL` tag when running the tag_update command
+  rem_unregistered_ignore_list: # Ignores a list of words found in the status of the tracker when running rem_unregistered command and will not remove the torrent if matched
+    - example placeholder words
+    - ignore if found
 
 directory:
+  # Do not remove these
+  # root_dir var: </your/path/here/>  # Root downloads directory used to check for orphaned files, noHL, and RecycleBin.
+  # <OPTIONAL> remote_dir var: </your/path/here/>  # Path of docker host mapping of root_dir.
+  # remote_dir must be set if you're running qbit_manage locally and qBittorrent/cross_seed is in a docker
+  # remote_dir should not be set if qbit_manage is running in a container
+  # <OPTIONAL> recycle_bin var: </your/path/here/>   # Path of the RecycleBin folder. Default location is set to remote_dir/.RecycleBin
+  # <OPTIONAL> torrents_dir var: </your/path/here/>  # Path of the your qbittorrent torrents directory. Required for `save_torrents` attribute in recyclebin
+  # <OPTIONAL> orphaned_dir var: </your/path/here/>  # Path of the the Orphaned Data folder. This is similar to RecycleBin, but only for orphaned data.
   root_dir: /home/siffreinsg/downloads/qbittorrent
   remote_dir: /home/siffreinsg/downloads/qbittorrent
   torrents_dir: /home/siffreinsg/.local/share/qBittorrent/BT_backup
-  cross_seed:
+  # recycle_bin: "/home/siffreinsg/downloads/qbittorrent/.RecycleBin"
   orphaned_dir: /home/siffreinsg/downloads/qbittorrent/orphaned_data
+
 
 cat:
   radarr: /home/siffreinsg/downloads/qbittorrent/radarr
@@ -72,7 +79,7 @@ tracker:
     tag:
       - private
       - uploadcx
-  digitalcore.club:
+  digitalcore:
     tag:
       - private
       - digitalcore
@@ -191,17 +198,16 @@ orphaned:
     - '**/*_unpackerred'
 
 webhooks:
-  error:
-  run_start:
-  run_end:
+  error: !ENV QBM_WEBHOOK_ERROR
+  run_start: !ENV QBM_WEBHOOK_RUN_START
+  run_end: !ENV QBM_WEBHOOK_RUN_END
   function:
-    cross_seed:
-    recheck:
-    cat_update:
-    tag_update:
-    rem_unregistered:
-    tag_tracker_error:
-    rem_orphaned:
-    tag_nohardlinks:
-    share_limits:
-    cleanup_dirs:
+    recheck: !ENV QBM_WEBHOOK_RECHECK
+    cat_update: !ENV QBM_WEBHOOK_CAT_UPDATE
+    tag_update: !ENV QBM_WEBHOOK_TAG_UPDATE
+    rem_unregistered: !ENV QBM_WEBHOOK_REM_UNREGISTERED
+    tag_tracker_error: !ENV QBM_WEBHOOK_TAG_TRACKER_ERROR
+    rem_orphaned: !ENV QBM_WEBHOOK_REM_ORPHANED
+    tag_nohardlinks: !ENV QBM_WEBHOOK_TAG_NOHARDLINKS
+    share_limits: !ENV QBM_WEBHOOK_SHARE_LIMITS
+    cleanup_dirs: !ENV QBM_WEBHOOK_CLEANUP_DIRS
