--- a/recyclarr/configs/radarr.yml
+++ b/recyclarr/configs/radarr.yml
@@ -28,8 +28,8 @@ radarr:
       # - template: sonarr-v4-quality-profile-hd-bluray-web-french-vostfr
       # - template: sonarr-v4-custom-formats-hd-bluray-web-french-vostfr
       # --- Profile MULTi.VF ---
-      # - template: sonarr-v4-quality-profile-hd-bluray-web-french-multi-vf
-      # - template: sonarr-v4-custom-formats-hd-bluray-web-french-multi-vf
+      - template: sonarr-v4-quality-profile-hd-bluray-web-french-multi-vf
+      - template: sonarr-v4-custom-formats-hd-bluray-web-french-multi-vf
       # --- Profile MULTi.VO ---
       - template: radarr-quality-profile-hd-bluray-web-french-multi-vo
       - template: radarr-custom-formats-hd-bluray-web-french-multi-vo
@@ -50,7 +50,7 @@ radarr:
           - 9f6cbff8cfe4ebbc1bde14c7b7bec0de # IMAX Enhanced
         assign_scores_to:
           # - name: FR-VOSTFR-HD
-          # - name: FR-MULTi-VF-HD
+          - name: FR-MULTi-VF-HD
           - name: FR-MULTi-VO-HD
 
       # Optionnels
@@ -64,7 +64,7 @@ radarr:
           # - f537cf427b64c38c8e36298f657e4828 # Scene
         assign_scores_to:
           # - name: FR-VOSTFR-HD
-          # - name: FR-MULTi-VF-HD
+          - name: FR-MULTi-VF-HD
           - name: FR-MULTi-VO-HD
 
       # Décommentez les lignes suivantes pour accepter les releases en x265 HD avec du HDR/DV
@@ -73,15 +73,15 @@ radarr:
         assign_scores_to:
           # - name: FR-VOSTFR-HD
             # score: 0
-          # - name: FR-MULTi-VF-HD
-            # score: 0
+          - name: FR-MULTi-VF-HD
+            score: 0
           - name: FR-MULTi-VO-HD
             score: 0
       - trash_ids:
           - 839bea857ed2c0a8e084f3cbdbd65ecb # x265 (no HDR/DV)
         assign_scores_to:
           # - name: FR-VOSTFR-HD
-          # - name: FR-MULTi-VF-HD
+          - name: FR-MULTi-VF-HD
           - name: FR-MULTi-VO-HD
 
       # Décommenter le score associé si vous ne voulez pas de FanSUB.
@@ -107,8 +107,8 @@ radarr:
         assign_scores_to:
           # - name: FR-VOSTFR-HD
             # score: 101
-          # - name: FR-MULTi-VF-HD
-            # score: 101
+          - name: FR-MULTi-VF-HD
+            score: 101
           - name: FR-MULTi-VO-HD
             score: 101
       - trash_ids:
@@ -116,8 +116,8 @@ radarr:
         assign_scores_to:
           # - name: FR-VOSTFR-HD
             # score: 101
-          # - name: FR-MULTi-VF-HD
-            # score: 101
+          - name: FR-MULTi-VF-HD
+            score: 101
           - name: FR-MULTi-VO-HD
             score: 101
       - trash_ids:
@@ -125,8 +125,8 @@ radarr:
         assign_scores_to:
           # - name: FR-VOSTFR-HD
             # score: 101
-          # - name: FR-MULTi-VF-HD
-            # score: 101
+          - name: FR-MULTi-VF-HD
+            score: 0
           - name: FR-MULTi-VO-HD
             score: 0
       - trash_ids:
@@ -134,17 +134,17 @@ radarr:
         assign_scores_to:
           # - name: FR-VOSTFR-HD
             # score: 101
-          # - name: FR-MULTi-VF-HD
-            # score: 101
+          - name: FR-MULTi-VF-HD
+            score: 101
           - name: FR-MULTi-VO-HD
-            score: 0
+            score: 101
       - trash_ids:
           - b6ace47331a1d3b77942fc18156f6df6 # VFQ
         assign_scores_to:
           # - name: FR-VOSTFR-HD
             # score: 101
-          # - name: FR-MULTi-VF-HD
-            # score: 101
+          - name: FR-MULTi-VF-HD
+            score: -101
           - name: FR-MULTi-VO-HD
             score: -101
       - trash_ids:
@@ -152,25 +152,25 @@ radarr:
         assign_scores_to:
           # - name: FR-VOSTFR-HD
             # score: 101
-          # - name: FR-MULTi-VF-HD
-            # score: 101
+          - name: FR-MULTi-VF-HD
+            score: -101
           - name: FR-MULTi-VO-HD
             score: -101
       - trash_ids:
           - 95aa50f71a01c82354a7a2b385f1c4d8 # VQ
         assign_scores_to:
           # - name: FR-VOSTFR-HD
-            # score: 101
-          # - name: FR-MULTi-VF-HD
-            # score: 101
+          #   score: 101
+          - name: FR-MULTi-VF-HD
+            score: -101
           - name: FR-MULTi-VO-HD
             score: -101
       - trash_ids:
           - b3fb499641d7b3c2006be1d9eb014cb3 # VFB
         assign_scores_to:
           # - name: FR-VOSTFR-HD
-            # score: 101
-          # - name: FR-MULTi-VF-HD
-            # score: 101
+          #   score: -101
+          - name: FR-MULTi-VF-HD
+            score: -101
           - name: FR-MULTi-VO-HD
             score: -101
