--- a/qbit_manage/config.yaml
+++ b/qbit_manage/config.yaml
@@ -25,6 +25,7 @@ settings:
     - Upload
   tracker_error_tag: issue # Will set the tag of any torrents that do not have a working tracker.
   nohardlinks_tag: noHL # Will set the tag of any torrents with no hardlinks.
+  stalled_tag: stalledDL # Will set the tag of any torrents stalled downloading.
   share_limits_tag: ~share_limit # Will add this tag when applying share limits to provide an easy way to filter torrents by share limit group/priority for each torrent
   share_limits_min_seeding_time_tag: MinSeedTimeNotReached # Tag to be added to torrents that have not yet reached the minimum seeding time
   share_limits_min_num_seeds_tag: MinSeedsNotMet # Tag to be added to torrents that have not yet reached the minimum number of seeds
@@ -130,6 +131,10 @@ share_limits:
       - radarr-sqp-completed
       - sonarr-completed
       - sonarr2-completed
+      - radarr
+      - radarr-sqp
+      - sonarr
+      - sonarr2
     cleanup: false
     max_ratio: -1
     max_seeding_time: -1
@@ -143,6 +148,10 @@ share_limits:
       - radarr-sqp-completed
       - sonarr-completed
       - sonarr2-completed
+      - radarr
+      - radarr-sqp
+      - sonarr
+      - sonarr2
     max_ratio: 0
     max_seeding_time: 0
     limit_upload_speed: 0
