--- a/qbit_manage/config.yaml
+++ b/qbit_manage/config.yaml
@@ -1,228 +1,142 @@
-# https://github.com/StuffAnThings/qbit_manage/wiki/Config-Setup
-
 commands:
-  dry_run: false # Will not execute any commands, but will print what would be executed.
-  recheck: false # Will recheck all torrents.
-  cat_update: true # Will update torrent categories.
-  tag_update: true # Will update torrent tags.
-  rem_unregistered: true # Will remove torrents that are not registered with qBittorrent.
-  tag_tracker_error: true # Will tag torrents that have a tracker error.
-  rem_orphaned: true # Will remove orphaned data.
-  tag_nohardlinks: true # Will tag torrents that have no hardlinks.
-  share_limits: true # Will apply share limits to torrents.
-  skip_qb_version_check: true # Will skip checking qBittorrent version.
-  skip_cleanup: false # Use this to skip emptying the Recycle Bin folder
+  dry_run: True
+  recheck: False
+  cat_update: False
+  tag_update: True
+  rem_unregistered: False # Plan to change to true in the future
+  tag_tracker_error: True
+  rem_orphaned: True
+  tag_nohardlinks: True
+  share_limits: True
+  skip_qb_version_check: False
+  skip_cleanup: False
 
 qbt:
-  host: !ENV QBT_HOST # Change to your qBittorrent host
-  user: !ENV QBT_USER # Change to your qBittorrent username or leave empty if IP whitelisted
-  pass: !ENV QBT_PASS # Change to your qBittorrent password or leave empty if IP whitelisted
+  host: !ENV QBIT_HOST
+  user: !ENV QBIT_USER
+  pass: !ENV QBIT_PASS
 
 settings:
-  force_auto_tmm: true # Will force qBittorrent to enable Automatic Torrent Management for each torrent.
-  force_auto_tmm_ignore_tags: #Torrents with these tags will be ignored when force_auto_tmm is enabled.
-    - cross-seed
-    - Upload
-  tracker_error_tag: issue # Will set the tag of any torrents that do not have a working tracker.
-  nohardlinks_tag: noHL # Will set the tag of any torrents with no hardlinks.
-  stalled_tag: stalledDL # Will set the tag of any torrents stalled downloading.
-  share_limits_tag: ~share_limit # Will add this tag when applying share limits to provide an easy way to filter torrents by share limit group/priority for each torrent
+  force_auto_tmm: False # Will force qBittorrent to enable Automatic Torrent Management for each torrent.
+  force_auto_tmm_ignore_tags: [] #Torrents with these tags will be ignored when force_auto_tmm is enabled.
+  tracker_error_tag: tracker_issue # Will set the tag of any torrents that do not have a working tracker.
+  nohardlinks_tag: no_hardlinks # Will set the tag of any torrents with no hardlinks.
+  stalled_tag: stalled # Will set the tag of any torrents stalled downloading.
+  share_limits_tag: ~limit # Will add this tag when applying share limits to provide an easy way to filter torrents by share limit group/priority for each torrent
   share_limits_min_seeding_time_tag: MinSeedTimeNotReached # Tag to be added to torrents that have not yet reached the minimum seeding time
   share_limits_min_num_seeds_tag: MinSeedsNotMet # Tag to be added to torrents that have not yet reached the minimum number of seeds
   share_limits_last_active_tag: LastActiveLimitNotReached # Tag to be added to torrents that have not yet reached the last active limit
   cat_filter_completed: True # Filters for completed torrents only when running cat_update command
-  share_limits_filter_completed: True # Filters for completed torrents only when running share_limits command
+  share_limits_filter_completed: False # Filters for completed torrents only when running share_limits command
   tag_nohardlinks_filter_completed: True # Filters for completed torrents only when running tag_nohardlinks command
   rem_unregistered_filter_completed: False # Filters for completed torrents only when running rem_unregistered command
   cat_update_all: True # Checks and updates all torrent categories if set to True when running cat_update command, otherwise only update torrents that are uncategorized
   disable_qbt_default_share_limits: True # Allows QBM to handle share limits by disabling qBittorrents default Share limits. Only active when the share_limits command is set to True
   tag_stalled_torrents: True # Tags any downloading torrents that are stalled with the `stalledDL` tag when running the tag_update command
-  rem_unregistered_ignore_list: # Ignores a list of words found in the status of the tracker when running rem_unregistered command and will not remove the torrent if matched
-    - example placeholder words
-    - ignore if found
+  rem_unregistered_ignore_list: [] # Ignores a list of words found in the status of the tracker when running rem_unregistered command and will not remove the torrent if matched
 
 directory:
-  # Do not remove these
-  # root_dir var: </your/path/here/>  # Root downloads directory used to check for orphaned files, noHL, and RecycleBin.
-  # <OPTIONAL> remote_dir var: </your/path/here/>  # Path of docker host mapping of root_dir.
-  # remote_dir must be set if you're running qbit_manage locally and qBittorrent/cross_seed is in a docker
-  # remote_dir should not be set if qbit_manage is running in a container
-  # <OPTIONAL> recycle_bin var: </your/path/here/>   # Path of the RecycleBin folder. Default location is set to remote_dir/.RecycleBin
-  # <OPTIONAL> torrents_dir var: </your/path/here/>  # Path of the your qbittorrent torrents directory. Required for `save_torrents` attribute in recyclebin
-  # <OPTIONAL> orphaned_dir var: </your/path/here/>  # Path of the the Orphaned Data folder. This is similar to RecycleBin, but only for orphaned data.
-  root_dir: /home/siffreinsg/downloads/qbittorrent
-  remote_dir: /home/siffreinsg/downloads/qbittorrent
-  torrents_dir: /home/siffreinsg/.local/share/qBittorrent/BT_backup
-  # recycle_bin: "/home/siffreinsg/downloads/qbittorrent/.RecycleBin"
-  orphaned_dir: /home/siffreinsg/downloads/qbittorrent/orphaned_data
-
+  root_dir: "/home/siffreinsg/downloads/qbittorrent"
+  remote_dir: "/home/siffreinsg/downloads/qbittorrent"
+  recycle_bin: "/home/siffreinsg/downloads/qbittorrent/.Trash"
+  torrents_dir: "/home/siffreinsg/.local/share/qBittorrent/BT_backup"
+  orphaned_dir: "/home/siffreinsg/downloads/qbittorrent/orphaned"
 
 cat:
   radarr: /home/siffreinsg/downloads/qbittorrent/radarr
+  radarr-completed: /home/siffreinsg/downloads/qbittorrent/radarr-completed
   radarr-sqp: /home/siffreinsg/downloads/qbittorrent/radarr-sqp
+  radarr-sqp-completed: /home/siffreinsg/downloads/qbittorrent/radarr-sqp-completed
   sonarr: /home/siffreinsg/downloads/qbittorrent/sonarr
+  sonarr-completed: /home/siffreinsg/downloads/qbittorrent/sonarr-completed
   sonarr2: /home/siffreinsg/downloads/qbittorrent/sonarr2
+  sonarr2-completed: /home/siffreinsg/downloads/qbittorrent/sonarr2-completed
   prowlarr: /home/siffreinsg/downloads/qbittorrent/prowlarr
   qbittorrent: /home/siffreinsg/downloads/qbittorrent/
-
-cat_change:
+  # Uncategorized: /home/siffreinsg/downloads/qbittorrent/
 
 tracker:
-  joinpeers|loadpeers|drago-server|drago-tracker|maxp2p|p2p-world:
-    tag:
-      - private
-      - yggtorrent
+  # Private trackers
+  maxp2p|p2p-world:
+    tag: [private, ygg]
   sharewood.tv:
-    tag:
-      - private
-      - sharewood
+    tag: [private, sharewood.tv]
   upload.cx:
-    tag:
-      - private
-      - uploadcx
-  digitalcore:
-    tag:
-      - private
-      - digitalcore
-  tlzdigital.com:
-    tag:
-      - private
-      - tlzdigital
+    tag: [private, upload.cx]
+  milkie:
+    tag: [private, milkie]
+  torrentleech|tleechreload:
+    tag: [private, torrentleech]
+  # Public trackers
   other:
-    tag:
-      - public
+    tag: [public]
 
 nohardlinks:
-  - radarr-completed
-  - radarr-sqp-completed
-  - sonarr-completed
-  - sonarr2-completed
+  radarr-completed:
+  radarr-sqp-completed:
+  sonarr-completed:
+  sonarr2-completed:
 
 share_limits:
-  # =====================
-  # Torrents with noHL tag (from *arr)
-  # =====================
-  noHL_private: # Delete private torrents after 7 days of seeding
+  # Seed torrents with no hardlinks
+  private_no_hardlinks: # From private trackers
     priority: 1
-    include_all_tags:
-      - noHL
-      - private
+    include_all_tags: [no_hardlinks, private]
     categories:
       - radarr-completed
       - radarr-sqp-completed
       - sonarr-completed
       - sonarr2-completed
-      - radarr
-      - radarr-sqp
-      - sonarr
-      - sonarr2
-    max_ratio: 1
-    max_seeding_time: 10080 # 7 days
-    cleanup: true
-
-  noHL_public: # Delete public torrents immediately
-    priority: 2
-    include_all_tags:
-      - noHL
-      - public
-    categories:
-      - radarr-completed
-      - radarr-sqp-completed
-      - sonarr-completed
-      - sonarr2-completed
-      - radarr
-      - radarr-sqp
-      - sonarr
-      - sonarr2
-    max_ratio: 0
-    max_seeding_time: 0
-    cleanup: true
-  # =====================
-  # Torrents from *arr
-  # =====================
-  arr_private:
-    priority: 10
-    include_all_tags:
-      - private
-    categories:
-      - radarr-completed
-      - radarr-sqp-completed
-      - sonarr-completed
-      - sonarr2-completed
-      - radarr
-      - radarr-sqp
-      - sonarr
-      - sonarr2
-    cleanup: false
     max_ratio: -1
-    max_seeding_time: -1
-
-  arr_public:
-    priority: 15
-    include_all_tags:
-      - public
+    max_seeding_time: 30d
+    max_last_active: 30d
+    min_last_active: 1d # Keep seeding if the torrent has been active in the last day
+    cleanup: true
+  no_hardlinks: # From all trackers
+    priority: 5
+    include_all_tags: [no_hardlinks]
+    exclude_any_tags: [private]
     categories:
       - radarr-completed
       - radarr-sqp-completed
       - sonarr-completed
       - sonarr2-completed
-      - radarr
-      - radarr-sqp
-      - sonarr
-      - sonarr2
     max_ratio: 0
-    max_seeding_time: 0
+    max_seeding_time: 7d
+    max_last_active: 7d
     limit_upload_speed: 0
-    cleanup: false
-  # =====================
-  # Manual torrents
-  # =====================
-  manual_private:
-    priority: 20
-    include_all_tags:
-      - private
-    categories:
-      - qbittorrent
-      - prowlarr
-    max_ratio: -1
-    max_seeding_time: -1
-    cleanup: false
-
-  manual_public:
+    cleanup: true
+  # Private trackers
+  private:
     priority: 25
-    include_all_tags:
-      - public
-    categories:
-      - qbittorrent
-      - prowlarr
-    max_ratio: 0
-    max_seeding_time: 0
-    limit_upload_speed: 0
+    include_all_tags: [private]
+    max_ratio: -1
+    max_seeding_time: -1
+    max_last_active: -1
+    limit_upload_speed: -1
     cleanup: false
-  # =====================
-  # Other torrents
-  # =====================
+  # Public trackers
   default:
     priority: 999
-    max_ratio: -1
-    max_seeding_time: -1
-    cleanup: false
+    max_seeding_time: 0s
+    limit_upload_speed: 0
 
 recyclebin:
-  enabled: false
-  empty_after_x_days: 7
+  enabled: true
+  empty_after_x_days: 30
   save_torrents: true
   split_by_category: true
 
 orphaned:
-  empty_after_x_days: 14
+  empty_after_x_days: 30
   exclude_patterns:
-    - '**/.DS_Store'
-    - '**/Thumbs.db'
-    - '**/@eaDir'
-    - '**/temp/**'
-    - '**/*.!qB'
-    - '**/*_unpackerred'
+    - "**/.DS_Store"
+    - "**/Thumbs.db"
+    - "**/@eaDir"
+    - "/data/torrents/temp/**"
+    - "**/*.!qB"
+    - "**/*_unpackerred"
+  max_orphaned_files_to_delete: 10
 
 webhooks:
   error: !ENV QBM_WEBHOOK_ERROR
